# inter-agent

./: .gitignore  .tool-versions  AGENTS.PLAN.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  ERROR_CODES.md  IDEAS.md  MANIFEST.in  PLAN.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  inter-agent  package.json  pyproject.toml  run-checks.sh  start  start-server.sh  start.sh
.agents/: PLAN.md
.agents/migration/: 10-migration-readiness.md
.agents/roles/: executor.md  leader.md
.claude-plugin/: marketplace.json
adapters/pi/: README.md  cli.py  commands.py
claude-plugin/: plugin.json
claude-plugin/monitors/: monitors.json
core/: __init__.py  client.py  list.py  router.py  send.py  server.py  shared.py
docs/: CLAUDE_CODE_SUPPORT.md  IDEAS.USER.md  IDEAS.md  SECURITY_BASELINE.md  SETUP.md  THREAT_MODEL.md
docs/ideas/: README.md  _template.md  additional-host-adapters.md  channel-pub-sub.md  claude-agent-teams.md  claude-command-autocomplete.md  claude-hooks.md  claude-mcp-channels.md  claude-mcp-resources.md  claude-mcp-tools.md  dev-coverage-reporting.md  dev-pre-commit-hooks.md  extension-publishing.md  ideas.sh  install-path-layout.md  pi-direct-websocket-client.md  pi-extension-tests.md  pi-harness-auto-start.md  pi-project-path-auto-discovery.md  pi-quality-gate-and-testing.md  pi-queued-message-mailbox.md  pi-slash-command-syntax.md  protocol-kick-reconnect-block.md  protocol-policy-middleware.md  protocol-remote-transport.md  protocol-tls-encryption.md  stable-install-sources.md
docs/plans/: README.md
integrations/claude-code/: README.md
integrations/codex/: README.md
integrations/opencode/: README.md
integrations/pi/: AGENTS.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.test.json
plans/01-workflow-and-packaging/: 01-namespace-package-layout.md  02-console-entry-points-and-uv-workflow.md  03-package-metadata-and-artifacts.md  04-local-quality-gates.md
plans/02-protocol-contract-and-conformance/: 01-complete-message-schemas.md  02-label-field-contract.md  03-error-code-semantics.md  04-core-operation-conformance.md  05-message-size-boundaries.md  06-capability-negotiation-baseline.md
plans/03-adapter-integration-and-command-ux/: 01-core-command-api.md  02-pi-adapter-live-integration-tests.md  03-pi-command-status-and-errors.md  04-pi-user-workflow-docs.md  05-start-script-development-helper.md
plans/04-lifecycle-and-routing-ux/: 01-target-resolution-rules.md  02-server-lifecycle-state-files.md  03-safe-shutdown-command.md  04-session-list-and-status-semantics.md  05-structured-logging-and-output.md
plans/05-security-and-operational-hardening/: 01-server-identity-hardening.md  02-session-id-collision-policy.md  03-connection-and-payload-limits.md  04-token-management-docs-and-tests.md  05-filesystem-permission-tests.md
plans/06-release-readiness/: 01-documentation-evergreen-pass.md  02-release-build-validation.md  03-versioning-and-changelog.md  04-adapter-boundary-for-future-hosts.md  05-final-completion-review.md
scripts/: validate-release-build.py
spec/: asyncapi.yaml  error-codes.md
spec/examples/: auth_challenge.json  (+25 more)
tests/: conftest.py  test_adapter_control.py  test_auth_helpers.py  test_claude_adapter_cli.py  test_claude_dedup.py  test_claude_listener.py  test_claude_plugin_static.py  test_claude_skill_static.py  test_claude_wrapper.py  test_client_helpers.py  test_config_resolution.py  test_console_entry_points.py  test_core_command_api.py  test_error_codes.py  test_filesystem_permissions.py  test_inter_agent_wrapper.py  test_pi_adapter_cli.py  test_pi_extension_static.py  test_pi_listener.py  test_server_lifecycle_state.py  test_spec_validation.py  test_start_script.py  test_status_semantics.py  test_tls_transport.py  test_token_management.py  test_versioning_docs.py
(+162 files in other folders)
