[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter-agent"
version = "0.1.0"
description = "Universal-friendly inter-agent message bus"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["core", "adapters", "adapters.pi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
