[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter-agent"
version = "0.1.0"
description = "Universal-friendly inter-agent message bus"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
]
dependencies = [
  "websockets==16.0",
]

[project.scripts]
inter-agent-server = "inter_agent.core.server:main"
inter-agent-connect = "inter_agent.core.client:main"
inter-agent-send = "inter_agent.core.send:main"
inter-agent-list = "inter_agent.core.list:main"
inter-agent-shutdown = "inter_agent.core.shutdown:main"
inter-agent-pi = "inter_agent.adapters.pi.cli:main"
inter-agent-claude = "inter_agent.adapters.claude.cli:main"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.12",
  "black==26.3.1",
  "mypy==1.20.2",
  "jsonschema==4.26.0",
  "pyyaml==6.0.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/inter-agent/spec" = ["spec/asyncapi.yaml"]
"share/inter-agent/spec/schemas" = ["spec/schemas/*.json"]
"share/inter-agent/spec/examples" = ["spec/examples/*.json"]
"share/inter-agent/integrations/claude-code" = ["integrations/claude-code/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
